Fixed float spillover by converting elements into flexboxes.

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,6 +6,28 @@ body {
   color: #071610;
 }
 
+.content-block {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 2rem;
+}
+
+.context-block .text {
+  flex: 1;
+  margin-right: 1.5rem;
+}
+
+.content-block .images {
+  flex: 0 0 40%;
+}
+
+.content-block .images img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.5rem;
+}
+
 p {
   width: 75ch;
   font-family: 'Literata', serif;
@@ -17,6 +39,7 @@ h2 {
   width: 40%;
   font-family: 'Outfit', sans-serif;
   margin-left: 2rem;
+  clear: right;
 }
 
 img {
